--- a/src-web/components/ApplicationCreationPage/templates/template.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/template.hbs
@@ -15,6 +15,9 @@ kind: Application
 metadata:
   name: {{{name}}}
   namespace: {{{namespace}}}
+  {{#if selfLink}}
+  selfLink: {{{selfLink}}}
+  {{/if}}
 spec:
   componentKinds:
   - group: apps.open-cluster-management.io
@@ -57,6 +60,7 @@ spec:
   githubPath=../githubPath
   gitReconcileOption=../gitReconcileOption  
   ansibleSecretName=../ansibleSecretName
+  selfLinks=../selfLinks
 }}
 
 {{>templatePlacement 
@@ -66,6 +70,7 @@ spec:
   local-cluster-checkbox=../local-cluster-checkbox
   clusterSelector=../clusterSelector
   online-cluster-only-checkbox=../online-cluster-only-checkbox
+  selfLinks=../selfLinks
 }}
 
 {{>templatePrePostTasks 
@@ -94,6 +99,7 @@ spec:
   helmChartName=../helmChartName
   helmPackageVersion=../helmPackageVersion
   ansibleSecretName=../ansibleSecretName
+  selfLinks=../selfLinks
 }}
 
 
@@ -104,6 +110,7 @@ spec:
   local-cluster-checkbox=../local-cluster-checkbox
   clusterSelector=../clusterSelector
   online-cluster-only-checkbox=../online-cluster-only-checkbox
+  selfLinks=../selfLinks
 }}
 
 {{>templatePrePostTasks 
@@ -130,6 +137,7 @@ spec:
   accessKey=../accessKey
   secretKey=../secretKey
   ansibleSecretName=../ansibleSecretName
+  selfLinks=../selfLinks
 }}
 
 {{>templatePlacement 
@@ -139,6 +147,7 @@ spec:
   local-cluster-checkbox=../local-cluster-checkbox
   clusterSelector=../clusterSelector
   online-cluster-only-checkbox=../online-cluster-only-checkbox
+  selfLinks=../selfLinks
 }}
 
 {{>templatePrePostTasks 
@@ -161,6 +170,7 @@ spec:
   channelNamespace=../channelNamespace 
   channelNamespaceExists=../channelNamespaceExists  
   namespaceChannelName=../namespaceChannelName
+  selfLinks=../selfLinks
 }}
 
 {{>templatePlacement 
@@ -170,6 +180,7 @@ spec:
   local-cluster-checkbox=../local-cluster-checkbox
   clusterSelector=../clusterSelector
   online-cluster-only-checkbox=../online-cluster-only-checkbox
+  selfLinks=../selfLinks
 }}
 
 {{>templatePrePostTasks 
