--- a/src-web/components/ApplicationCreationPage/templates/templateHelm.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/templateHelm.hbs
@@ -18,6 +18,9 @@ kind: Channel
 metadata:
   name: {{{channelName}}}
   namespace: {{{channelName}}}-ns
+  {{#if selfLinks}}
+  selfLink: {{{selfLinks.Channel}}}
+  {{/if}}
 spec:
   type: HelmRepo
 {{#if helmURL}}
@@ -45,6 +48,9 @@ metadata:
     app: {{{@root.name}}}
   name: {{{@root.name}}}-subscription-{{@index}}
   namespace: {{{@root.namespace}}}
+  {{#if selfLinks}}
+  selfLink: {{{selfLinks.Subscription}}}
+  {{/if}}
 spec:
 {{#if ansibleSecretName}} 
   hooksecretref: 
