--- a/src-web/components/ApplicationCreationPage/templates/templateObjectStore.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/templateObjectStore.hbs
@@ -19,6 +19,9 @@ kind: Channel
 metadata:
   name: {{{channelName}}}
   namespace: {{{channelName}}}-ns
+  {{#if selfLinks}}
+  selfLink: {{{selfLinks.Channel}}}
+  {{/if}}
 spec:
   type: ObjectBucket
 {{#if objectstoreURL}}
@@ -46,6 +49,9 @@ metadata:
     app: {{{@root.name}}}
   name: {{{@root.name}}}-subscription-{{@index}}
   namespace: {{{@root.namespace}}}
+  {{#if selfLinks}}
+  selfLink: {{{selfLinks.Subscription}}}
+  {{/if}}
 spec:
 {{#if ansibleSecretName}} 
   hooksecretref: 
