--- a/src-web/components/ApplicationCreationPage/templates/templateGit.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/templateGit.hbs
@@ -18,6 +18,9 @@ kind: Channel
 metadata:
   name: {{{channelName}}}
   namespace: {{{channelName}}}-ns
+  {{#if selfLinks}}
+  selfLink: {{{selfLinks.Channel}}}
+  {{/if}}
 spec:
   type: Git
 {{#if githubURL}}
@@ -51,6 +54,9 @@ metadata:
     app: {{{@root.name}}}
   name: {{{@root.name}}}-subscription-{{@index}}
   namespace: {{{@root.namespace}}}
+  {{#if selfLinks}}
+  selfLink: {{{selfLinks.Subscription}}}
+  {{/if}}
 spec:
 {{#if ansibleSecretName}} 
   hooksecretref: 
