--- a/src-web/components/TemplateEditor/scss/control-panel.scss
+++ b/src-web/components/TemplateEditor/scss/control-panel.scss
@@ -311,6 +311,11 @@
       &:disabled {
         cursor: not-allowed;
       }
+
+      &:disabled + .bx--list-box__selection {
+        cursor: not-allowed;
+        pointer-events: none;
+      }
     }
 
     &-add-value-container {
