Implement warnings for editing with shared resources

--- a/src-web/components/ApplicationCreationPage/components/style.scss
+++ b/src-web/components/ApplicationCreationPage/components/style.scss
@@ -101,6 +101,30 @@
   }
 }
 
+.shared-resource-warning {
+  display: inline-flex;
+  color: $color__blue-90;
+  line-height: 2rem;
+
+  svg {
+    fill: #e6ae3c;
+    width: 18px;
+    height: 18px;
+  }
+
+  p {
+    font-size: 14px;
+  }
+
+  p:first-of-type {
+    margin-bottom: 0.5rem;
+  }
+
+  div:first-of-type {
+    margin-right: 5px;
+  }
+}
+
 .timeWindow-container {
   position: relative;
 
