--- a/src-web/components/Topology/scss/resource-toolbar.scss
+++ b/src-web/components/Topology/scss/resource-toolbar.scss
@@ -36,7 +36,7 @@
     > div {
       display: flex;
       align-items: center;
-      justify-content: flex-end;
+      justify-content: flex-start;
     }
 
     .resource-toolbar-buttons {
