make names unique

--- a/src-web/components/ApplicationCreationPage/templates/template.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/template.hbs
@@ -61,6 +61,7 @@ spec:
   gitReconcileOption=../gitReconcileOption  
   ansibleSecretName=../ansibleSecretName
   selfLinks=../selfLinks
+  uniqueGroupID=../uniqueGroupID
 }}
 
 {{>templatePlacement 
@@ -71,6 +72,7 @@ spec:
   clusterSelector=../clusterSelector
   online-cluster-only-checkbox=../online-cluster-only-checkbox
   selfLinks=../selfLinks
+  uniqueGroupID=../uniqueGroupID
 }}
 
 {{>templatePrePostTasks 
@@ -100,6 +102,7 @@ spec:
   helmPackageVersion=../helmPackageVersion
   ansibleSecretName=../ansibleSecretName
   selfLinks=../selfLinks
+  uniqueGroupID=../uniqueGroupID
 }}
 
 
@@ -111,6 +114,7 @@ spec:
   clusterSelector=../clusterSelector
   online-cluster-only-checkbox=../online-cluster-only-checkbox
   selfLinks=../selfLinks
+  uniqueGroupID=../uniqueGroupID
 }}
 
 {{>templatePrePostTasks 
@@ -138,6 +142,7 @@ spec:
   secretKey=../secretKey
   ansibleSecretName=../ansibleSecretName
   selfLinks=../selfLinks
+  uniqueGroupID=../uniqueGroupID
 }}
 
 {{>templatePlacement 
@@ -148,6 +153,7 @@ spec:
   clusterSelector=../clusterSelector
   online-cluster-only-checkbox=../online-cluster-only-checkbox
   selfLinks=../selfLinks
+  uniqueGroupID=../uniqueGroupID
 }}
 
 {{>templatePrePostTasks 
@@ -171,6 +177,7 @@ spec:
   channelNamespaceExists=../channelNamespaceExists  
   namespaceChannelName=../namespaceChannelName
   selfLinks=../selfLinks
+  uniqueGroupID=../uniqueGroupID
 }}
 
 {{>templatePlacement 
@@ -181,6 +188,7 @@ spec:
   clusterSelector=../clusterSelector
   online-cluster-only-checkbox=../online-cluster-only-checkbox
   selfLinks=../selfLinks
+  uniqueGroupID=../uniqueGroupID
 }}
 
 {{>templatePrePostTasks 
