--- a/src-web/components/ApplicationCreationPage/templates/templateGit.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/templateGit.hbs
@@ -52,7 +52,7 @@ metadata:
     {{/if}}
   labels:
     app: {{{@root.name}}}
-  name: {{{@root.name}}}-subscription-{{@index}}
+  name: {{{@root.name}}}-subscription-{{uniqueGroupID}}
   namespace: {{{@root.namespace}}}
   {{#if selfLinks}}
   selfLink: {{{selfLinks.Subscription}}}
