--- a/src-web/components/ApplicationCreationPage/templates/templateObjectStore.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/templateObjectStore.hbs
@@ -47,7 +47,7 @@ kind: Subscription
 metadata:
   labels:
     app: {{{@root.name}}}
-  name: {{{@root.name}}}-subscription-{{@index}}
+  name: {{{@root.name}}}-subscription-{{uniqueGroupID}}
   namespace: {{{@root.namespace}}}
   {{#if selfLinks}}
   selfLink: {{{selfLinks.Subscription}}}
