--- a/src-web/components/ApplicationCreationPage/templates/templateOther.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/templateOther.hbs
@@ -24,7 +24,7 @@ kind: Subscription
 metadata:
   labels:
     app: {{{@root.name}}}
-  name: {{{@root.name}}}-subscription-{{@index}}
+  name: {{{@root.name}}}-subscription-{{uniqueGroupID}}
   namespace: {{{@root.namespace}}}
   {{#if selfLinks}}
   selfLink: {{{selfLinks.Subscription}}}
