--- a/src-web/components/TemplateEditor/scss/template-editor.scss
+++ b/src-web/components/TemplateEditor/scss/template-editor.scss
@@ -154,7 +154,6 @@
   color: #cccccc;
   padding: 6px 10px;
   margin-left: 24px;
-  white-space: break-spaces;
 
   p {
     font-size: 14px;
@@ -166,6 +165,7 @@
     padding: 0 10px;
     margin: 0;
     color: white;
+    white-space: pre;
   }
 
 }
@@ -190,7 +190,6 @@
   width: 6px !important;
   margin-left: 12px;
 }
-
 
 .deletedDecoration {
   margin-left: 6px;
