patternfly filter chips

--- a/src-web/components/Topology/scss/topology-controls.scss
+++ b/src-web/components/Topology/scss/topology-controls.scss
@@ -13,7 +13,7 @@
 .topology-controls {
     display: flex;
     flex-wrap: wrap;
-    margin: 0rem 1rem 1rem 0rem;
+    margin: 0rem 1rem 5px 0rem;
     justify-content: space-between;
 
     .topology-control-container {
