--- a/src-web/components/Topology/scss/resource-toolbar.scss
+++ b/src-web/components/Topology/scss/resource-toolbar.scss
@@ -1,88 +1,53 @@
 /*******************************************************************************
  * Licensed Materials - Property of IBM
- * (c) Copyright IBM Corporation 2018. All Rights Reserved.
+ * (c) Copyright IBM Corporation 2018, 2019. All Rights Reserved.
  * Copyright (c) 2020 Red Hat, Inc.
+ *
  * Note to U.S. Government Users Restricted Rights:
  * Use, duplication or disclosure restricted by GSA ADP Schedule
  * Contract with IBM Corp.
  *******************************************************************************/
-@import "node_modules/carbon-components/scss/globals/scss/_colors";
-@import "variables";
+@import 'node_modules/carbon-components/scss/globals/scss/_colors';
+@import 'variables';
 
-.resource-toolbar {
-  //position: relative;
-  top: $secondary-header-top;
-  //right: 25px;
-  //z-index: 1001;
-  background-color: $color__white;
-  //display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  //height: $secondary-header-min-height;
+.topology-controls {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0rem 1rem 5px 0rem;
+  justify-content: space-between;
 
-  &.hide {
-    display: none;
-  }
-
-  .resource-toolbar-container {
-    position: relative;
-    top: 0px;
-    left: 0;
+  .topology-control-container {
     display: flex;
-    //min-height: $secondary-header-min-height;
-    flex-direction: column;
-    justify-content: center;
+    align-items: center;
 
     > div {
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
+      width: 90vw;
+      margin-right: 20px;
     }
 
-    .resource-toolbar-buttons {
-      height: 0;
-      margin: 0px 0px 3px 0px;
-
-      > div {
-        color: $color__blue-51;
-        font-size: 14px;
-        font-weight: bold;
-        cursor: pointer;
-        outline: none;
-        display: flex;
-        align-items: center;
-        height: 26px;
-
-        .button-icon {
-          width: 12px;
-          height: 12px;
-          fill: $color__blue-51;
-          stroke: none;
-        }
-
-        .button-label {
-          padding: 0 8px;
-          white-space: nowrap;
-        }
+    > * {
+      input::placeholder {
+        color: $ibm-colors__gray--40;
       }
 
-      > div:not(:last-child) {
-        padding-right: 20px;
-        border-right: 2px solid $color__gray-1;
+      .bx--list-box__menu {
+        max-height: 25rem;
       }
 
-      > div:last-child {
-        padding-left: 20px;
+      .bx--text-input,
+      .bx--search-input,
+      .bx--list-box__field {
+        background-color: #fff;
       }
     }
 
-    .resource-filter-bar {
+    .clear-filters {
       .bx--tag.bx--tag--custom {
         margin-left: 10px;
-        background-color: $mcm_view_filter;
+        background-color: #edc0c0;
         color: $color__blue-90;
-        font-size: 0.9rem;
-        padding: 0.8rem;
+        font-size: .9rem;
+        padding: .8rem;
         line-height: 20px;
         white-space: nowrap;
 
@@ -93,5 +58,11 @@
         }
       }
     }
+  }
+
+  .topology-type-filter-bar {
+    display: flex;
+    align-items: flex-end;
+    height: 100%;
   }
 }
