show chip label descenders

--- a/src-web/components/Topology/scss/resource-toolbar.scss
+++ b/src-web/components/Topology/scss/resource-toolbar.scss
@@ -84,6 +84,10 @@
       .pf-c-chip-group__label {
         padding: 10px;
       }
+
+      .pf-c-chip__text {
+        overflow: visible;
+      }
     }
   }
 }
