--- a/src-web/components/ApplicationCreationPage/templates/template.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/template.hbs
@@ -99,6 +99,7 @@ spec:
   helmUser=../helmUser
   helmPassword=../helmPassword
   helmChartName=../helmChartName
+  helmPackageAlias=../helmPackageAlias
   helmPackageVersion=../helmPackageVersion
   ansibleSecretName=../ansibleSecretName
   selfLinks=../selfLinks
