add alias for helm type (#766)
* add alias

* fix logic

--- a/src-web/components/ApplicationCreationPage/templates/templateHelm.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/templateHelm.hbs
@@ -64,6 +64,11 @@ spec:
 {{#if helmChartName}}
   name: {{{helmChartName}}}
 {{/if}}
+  packageOverrides:
+  - packageName: {{{helmChartName}}}
+{{#if helmPackageAlias}}
+    packageAlias: {{{helmPackageAlias}}}
+{{/if}}
 {{#if helmPackageVersion}}
   packageFilter:
     version: "{{{helmPackageVersion}}}"
