--- a/src-web/components/Topology/scss/resource-toolbar.scss
+++ b/src-web/components/Topology/scss/resource-toolbar.scss
@@ -82,11 +82,15 @@
       }
 
       .pf-c-chip-group__label {
-        padding: 10px;
+        padding: 0 10px;
       }
 
       .pf-c-chip__text {
         overflow: visible;
+      }
+
+      .pf-c-chip-group__close {
+        padding: 3px 0;
       }
     }
   }
