--- a/src-web/components/ApplicationCreationPage/templates/templateGit.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/templateGit.hbs
@@ -26,6 +26,9 @@ spec:
 {{#if githubURL}}
   pathname: '{{{githubURL}}}'
 {{/if}}
+{{#if gitInsecureSkipVerify}}
+  insecureSkipVerify: true
+{{/if}}
 {{#if githubUser}}
   secretRef:
     name: {{{channelName}}}-auth
