add button to new git and helm channels

--- a/src-web/components/ApplicationCreationPage/templates/template.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/template.hbs
@@ -102,6 +102,7 @@ spec:
   helmChartName=../helmChartName
   helmPackageAlias=../helmPackageAlias
   helmPackageVersion=../helmPackageVersion
+  helmInsecureSkipVerify=../helmInsecureSkipVerify
   ansibleSecretName=../ansibleSecretName
   selfLinks=../selfLinks
   uniqueGroupID=../uniqueGroupID
