fix issue and add helm credentials

--- a/src-web/components/ApplicationCreationPage/templates/templateHelm.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/templateHelm.hbs
@@ -37,7 +37,7 @@ metadata:
   namespace: {{{channelName}}}-ns
 data:
   user: {{{helmUser}}}
-  accessToken: {{{helmPassword}}}
+  password: {{{helmPassword}}}
 {{/if}}
 {{/unless}}      
 ---
