--- a/src-web/components/ApplicationCreationPage/templates/template.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/template.hbs
@@ -59,6 +59,7 @@ spec:
   githubBranch=../githubBranch 
   githubPath=../githubPath
   gitReconcileOption=../gitReconcileOption  
+  gitInsecureSkipVerify=../gitInsecureSkipVerify
   ansibleSecretName=../ansibleSecretName
   selfLinks=../selfLinks
   uniqueGroupID=../uniqueGroupID
@@ -101,6 +102,7 @@ spec:
   helmChartName=../helmChartName
   helmPackageAlias=../helmPackageAlias
   helmPackageVersion=../helmPackageVersion
+  helmInsecureSkipVerify=../helmInsecureSkipVerify
   ansibleSecretName=../ansibleSecretName
   selfLinks=../selfLinks
   uniqueGroupID=../uniqueGroupID
