--- a/src-web/components/TemplateEditor/scss/control-panel.scss
+++ b/src-web/components/TemplateEditor/scss/control-panel.scss
@@ -374,7 +374,7 @@
       position: absolute;
       top: 8px;
       right: 5px;
-      z-index: 1000;
+      z-index: 999;
 
       .icon {
         margin: 0 6px;
@@ -446,7 +446,7 @@
     &-table {
       .bx--toolbar-content > div {
         & > .bx--btn {
-        margin-left: 10px;
+          margin-left: 10px;
           border-radius: 3px;
           height: 24px;
           font-size: 16px;
@@ -454,7 +454,7 @@
           padding: 16px;
           display: inline-flex;
         }
-  
+
         & > .bx--btn--primary {
           background-color: $color__white;
           color: $color__blue-51;
@@ -462,7 +462,10 @@
           border-width: 1px;
           margin: 2px;
           margin-right: 12px;
-          &:hover, &:active, &:focus {
+
+          &:hover,
+          &:active,
+          &:focus {
             background-color: unset;
             color: $color__blue-51;
             box-shadow: 0 0 0 2px $color__blue-51;
