--- a/src-web/components/ApplicationCreationPage/templates/templatePlacement.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/templatePlacement.hbs
@@ -44,26 +44,23 @@ metadata:
 spec:
   clusterSelector:
     matchLabels:
-      {{#if local-cluster-checkbox}}
-      'local-cluster': 'true'
-      {{else}}
       {{#each clusterSelector.clusterLabelsList}}
       {{#if validValue}}
       '{{{labelName}}}': '{{{labelValue}}}'
       {{/if}}
       {{/each}} 
-      {{/if}}
-  {{#if online-cluster-only-checkbox}}
-  clusterConditions:
-    - type: ManagedClusterConditionAvailable
-      status: "True"
-  {{/if}}
 {{else}}
   {{#if online-cluster-only-checkbox}}
 spec:
   clusterConditions:
     - type: ManagedClusterConditionAvailable
       status: "True"
+  {{/if}}
+  {{#if local-cluster-checkbox}}
+spec:
+  clusterSelector:
+    matchLabels:
+      'local-cluster': 'true'
   {{/if}}
 {{/if}}
 {{/unless}}
