--- a/scss/common.scss
+++ b/scss/common.scss
@@ -10,6 +10,7 @@
 @import 'node_modules/carbon-components/scss/globals/scss/_colors';
 @import 'node_modules/carbon-components/scss/globals/scss/_helper-mixins';
 @import '../node_modules/@patternfly/patternfly/patternfly.css';
+@import '../node_modules/@patternfly/patternfly/patternfly-addons.css';
 @import 'header-carbon-v9-migration';
 @import './variables.scss';
 @import '_red-hat-font';
