WIP using PatternFly for TimeWindow view

--- a/src-web/components/ApplicationCreationPage/components/style.scss
+++ b/src-web/components/ApplicationCreationPage/components/style.scss
@@ -90,7 +90,7 @@
   .add-label-btn-text {
     font-weight: 600;
     font-size: 14px;
-    color: #3d70b2;
+    color: #06c;
   }
 
   .remove-label-btn {
@@ -271,7 +271,7 @@
   .add-time-btn-text {
     font-weight: 600;
     font-size: 14px;
-    color: #3d70b2;
+    color: #06c;
   }
 
   .remove-time-btn {
