change Alert to AcmAlert in single app page (#835)
* change Alert to AcmAlert in single app page

* add noClose and styling

--- a/src-web/components/common/OverviewCards/style.scss
+++ b/src-web/components/common/OverviewCards/style.scss
@@ -185,12 +185,12 @@
   }
 }
 
-.overview-notification {
+.pf-c-alert {
   margin: 0.5rem 0;
-  --pf-c-alert--BoxShadow: none;
 
-  .pf-c-alert__title {
-    margin-left: 1rem;
-    font-size: 15px;
+  .pf-c-alert__title,
+  .pf-c-alert__description > p {
+    font-size: 14px;
+    margin-top: auto;
   }
 }
