set merge update to be checked by default

--- a/src-web/components/ApplicationCreationPage/templates/templateGit.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/templateGit.hbs
@@ -50,9 +50,11 @@ metadata:
   annotations:
     apps.open-cluster-management.io/git-branch: {{{githubBranch}}}
     apps.open-cluster-management.io/git-path: {{{githubPath}}}
-    {{#if gitReconcileOption}}
+  {{#if gitReconcileOption}}
     apps.open-cluster-management.io/reconcile-option: merge
-    {{/if}}
+  {{else}}
+    apps.open-cluster-management.io/reconcile-option: replace
+  {{/if}}
   labels:
     app: {{{@root.name}}}
   name: {{{@root.name}}}-subscription-{{uniqueGroupID}}
