--- a/src-web/components/ApplicationCreationPage/templates/templateGit.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/templateGit.hbs
@@ -50,9 +50,7 @@ metadata:
   annotations:
     apps.open-cluster-management.io/git-branch: {{{githubBranch}}}
     apps.open-cluster-management.io/git-path: {{{githubPath}}}
-    {{#if gitReconcileOption}}
-    apps.open-cluster-management.io/reconcile-option: merge
-    {{/if}}
+    apps.open-cluster-management.io/reconcile-option: {{{gitReconcileOption}}}
   labels:
     app: {{{@root.name}}}
   name: {{{@root.name}}}-subscription-{{uniqueGroupID}}
