WIP list sibling resources

--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -181,3 +181,12 @@
     margin-right: 5px;
   }
 }
+
+.sibling-resource-content {
+  line-height: 21px;
+  font-size: 14px;
+}
+
+.code-font {
+  font-style: italic;
+}
