Adding uniqby function

--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -185,8 +185,9 @@
 .sibling-resource-content {
   line-height: 21px;
   font-size: 14px;
+  border-bottom: 1px solid #dfe3e6;
 }
 
-.code-font {
+.italic-font {
   font-style: italic;
 }
