List the name of resources using shared resources on delete app modalRemove modal latest (#882)
* List sibling resources
* Update unit tests

--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -181,3 +181,13 @@
     margin-right: 5px;
   }
 }
+
+.sibling-resource-content {
+  line-height: 21px;
+  font-size: 14px;
+  border-bottom: 1px solid #dfe3e6;
+}
+
+.italic-font {
+  font-style: italic;
+}
