add note in topology legend

--- a/src-web/components/Topology/scss/topology-details.scss
+++ b/src-web/components/Topology/scss/topology-details.scss
@@ -111,6 +111,12 @@
       font-weight: 700;
     }
 
+    .titleNoteText {
+      margin-top: 4px;
+      font-size: 12px;
+      line-height: 18px;
+    }
+
     .bodyText {
       margin-top: 21px;
       font-size: 14px;
