update text styling

--- a/src-web/components/Topology/scss/resource-filter-view.scss
+++ b/src-web/components/Topology/scss/resource-filter-view.scss
@@ -93,8 +93,8 @@ $filter_sidebar_animation_duration: 100ms;
       }
 
       .pf-c-check__label {
-        font-size: 12px;
-        color: white;
+        font-size: 14px;
+        color: $color__white;
       }
 
       .filter-section-expand {
