--- a/src-web/components/ApplicationCreationPage/templates/templatePlacement.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/templatePlacement.hbs
@@ -28,7 +28,7 @@
     {{/if}}
 {{/if}}
 
-{{#unless selectedRuleName}} 
+{{#unless existingrule-checkbox}} 
 ---
 apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
