fix placement of refresh elements

--- a/src-web/components/common/ResourceDetails/style.scss
+++ b/src-web/components/common/ResourceDetails/style.scss
@@ -13,7 +13,7 @@
   .app-info-and-dashboard-links {
     position: fixed;
     top: 5.7rem;
-    right: calc(3% + 160px);
+    right: 12.5rem;
     z-index: 1001;
     background-color: $color__white;
     display: inline-block;
