--- a/src-web/components/Topology/scss/topology-diagram.scss
+++ b/src-web/components/Topology/scss/topology-diagram.scss
@@ -36,6 +36,7 @@
     right: 1.5625rem;
     top: 6.5rem;
     height: 1.25rem;
+    margin-right: 0.625rem;
     padding: 1rem 1rem 3.375rem;
 
     .bx--loading--small {
