--- a/src-web/components/Topology/scss/topology-diagram.scss
+++ b/src-web/components/Topology/scss/topology-diagram.scss
@@ -37,7 +37,7 @@
     top: 6.5rem;
     height: 1.25rem;
     margin-right: 0.625rem;
-    padding: 1rem 1% 3.375rem;
+    padding: 1rem 1rem 3.375rem;
 
     .bx--loading--small {
       width: 1rem;
