--- a/src-web/components/ApplicationCreationPage/components/style.scss
+++ b/src-web/components/ApplicationCreationPage/components/style.scss
@@ -172,13 +172,21 @@
 
   // Time window config - Days of the week section
   .config-days-section {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
   }
 
   .config-title {
     font-weight: 600;
     font-size: 14px;
     margin-bottom: 10px;
+  }
+
+  .time-picker-title {
+    display: flex;
+
+    .config-title {
+      padding-right: 77px;
+    }
   }
 
   .config-descr {
@@ -202,7 +210,7 @@
 
   // Time window config - Timezone section
   .config-timezone-section {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
   }
 
   .config-timezone-combo-box {
@@ -229,19 +237,19 @@
     margin-bottom: 20px;
   }
 
-  .config-start-time {
+  .config-input-time {
     float: left;
+    margin-right: 10px;
   }
 
   .bx--label {
-    font-weight: 600;
-    font-size: 14px;
+    font-weight: 400;
+    font-size: 16px;
     margin-bottom: 10px;
   }
 
   .bx--time-picker__input-field {
     width: 140px;
-    margin-right: 10px;
     background-color: $acm_background_color;
   }
 
@@ -260,7 +268,7 @@
   }
 
   .btn-disabled {
-    cursor: not-allowed;
+    cursor: not-allowed !important;
   }
 
   .add-time-btn-icon {
