--- a/scss/secondary-header.scss
+++ b/scss/secondary-header.scss
@@ -11,17 +11,22 @@
 @import 'variables';
 
 .secondary-header {
+  display: flex;
+  position: fixed;
+  width: 100%;
+  background-color: $color__white;
+
   .header-box-shadow {
     position: fixed;
     width: 100%;
-    height: 66px;
-    box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.05);
-    z-index: 900;
+    height: 32px;
+    top: 139px;
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.05);
+    left: 0px;
 
     &--tall {
       @extend .header-box-shadow;
-      height: 15px;
-      top: 152px;
+      top: 157px;
     }
   }
 
@@ -154,14 +159,14 @@
     min-height: 40px;
 
     &.cluster-tabs {
-      // top: 65px;
+      top: 65px;
       background-color: $color__white;
       height: 40px;
       width: 100%;
 
       &--long {
         @extend .cluster-tabs;
-        // top: 90px;
+        top: 90px;
       }
     }
   }
@@ -170,7 +175,7 @@
     display: flex;
 
     .main-button-container {
-      // top: 65px;
+      top: 65px;
       background-color: #fff;
       vertical-align: bottom;
       padding-top: 3px;
