--- a/scss/secondary-header.scss
+++ b/scss/secondary-header.scss
@@ -19,9 +19,16 @@
   .header-box-shadow {
     position: fixed;
     width: 100%;
+    height: 32px;
+    top: 175px;
     box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.05);
     left: 0px;
     z-index: -1;
+
+    &--tall {
+      @extend .header-box-shadow;
+      top: 157px;
+    }
   }
 
   // PF dropdown
